@@ -1,3 +1,7 @@
+2014-07-11  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* configure.ac: Reenable mmap for 32- and 64-bit Windows.
+
 2014-07-10  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* configure.ac: Bug fix for MinGW: do not use mmap.
